paid/force-app/main/default/objects/Paid_Payment__c/Paid_Payment__c.object-meta.xml
<CustomObject>
    <label>Paid_Payment</label>
    <nameField>
        <label>Paid_Payment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Paid_Payments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>