paid/force-app/main/default/objects/Paid_Payment__c/fields/Paid_Account__c.field-meta.xml
<CustomField>
    <fullName>Paid_Account__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Paid_Payments</relationshipLabel>
    <relationshipName>Paid_Payments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>