paid/force-app/main/default/objects/Paid_Payment__c/fields/Paid_Allocation_Status__c.field-meta.xml
<CustomField>
    <fullName>Paid_Allocation_Status__c</fullName>
    <label>Paid_Allocation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>fail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>