paid/force-app/main/default/objects/Paid_Payment__c/fields/Paid_Bank_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Paid_Bank_Account_Name__c</fullName>
    <label>Paid Bank Account Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>