paid/force-app/main/default/objects/Paid_Payment__c/fields/Paid_Bank_Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Paid_Bank_Account_Type__c</fullName>
    <label>Paid  Bank Account Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Checking</fullName>
            </value>
            <value>
                <fullName>Business Checking</fullName>
            </value>
            <value>
                <fullName>Savings</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>