paid/force-app/main/default/objects/Paid_Payment__c/fields/Paid_Bank_Routing_Code__c.field-meta.xml
<CustomField>
    <fullName>Paid_Bank_Routing_Code__c</fullName>
    <label>Paid  Bank Routing Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>