paid/force-app/main/default/objects/Paid_Payment__c/fields/Paid_Card_Code_Response__c.field-meta.xml
<CustomField>
    <fullName>Paid_Card_Code_Response__c</fullName>
    <label>Paid Card Code Response</label>
    <length>255</length>
    <type>Text</type>
</CustomField>