paid/force-app/main/default/objects/Paid_Payment__c/fields/Paid_Check_Date__c.field-meta.xml
<CustomField>
    <fullName>Paid_Check_Date__c</fullName>
    <label>Paid Check Date</label>
    <type>Date</type>
</CustomField>