paid/force-app/main/default/objects/Paid_Payment__c/fields/Paid_Contact__c.field-meta.xml
<CustomField>
    <fullName>Paid_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Paid_Payments</relationshipLabel>
    <relationshipName>Paid_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>