paid/force-app/main/default/objects/Paid_Payment__c/fields/Paid_Gateway_Transaction_ID__c.field-meta.xml
<CustomField>
    <fullName>Paid_Gateway_Transaction_ID__c</fullName>
    <label>Gateway Transaction ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>