paid/force-app/main/default/objects/Paid_Payment__c/fields/Paid_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Paid_Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Paid_Invoice</label>
    <referenceTo>Paid_Invoice__c</referenceTo>
    <relationshipLabel>Paid_Payments</relationshipLabel>
    <relationshipName>Paid_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>