paid/force-app/main/default/objects/Paid_Payment__c/fields/Paid_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>Paid_Payment_Date__c</fullName>
    <label>Paid Payment Date</label>
    <type>Date</type>
</CustomField>