paid/force-app/main/default/objects/Paid_Payment__c/fields/Paid_Payment_Description__c.field-meta.xml
<CustomField>
    <fullName>Paid_Payment_Description__c</fullName>
    <label>Paid Payment Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>