paid/force-app/main/default/objects/Paid_Payment__c/fields/Paid_Payment_Number__c.field-meta.xml
<CustomField>
    <fullName>Paid_Payment_Number__c</fullName>
    <displayFormat>P-{00000}</displayFormat>
    <label>Paid Payment Number</label>
    <type>AutoNumber</type>
</CustomField>