paid/force-app/main/default/objects/Paid_Payment__c/fields/Paid_Request_Credit_Card_Number__c.field-meta.xml
<CustomField>
    <fullName>Paid_Request_Credit_Card_Number__c</fullName>
    <label>Paid Request - Credit Card Number</label>
    <length>4</length>
    <type>Text</type>
</CustomField>