paid/force-app/main/default/objects/Paid_Payment__c/fields/Paid_Request_Type_Of_Payment__c.field-meta.xml
<CustomField>
    <fullName>Paid_Request_Type_Of_Payment__c</fullName>
    <label>Paid Request - Type Of Payment</label>
    <length>20</length>
    <type>Text</type>
</CustomField>