paid/force-app/main/default/objects/Paid_Payment__c/fields/Paid_Token_ID__c.field-meta.xml
<CustomField>
    <fullName>Paid_Token_ID__c</fullName>
    <label>Paid Token ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>