paid/force-app/main/default/objects/Paid_Payment__c/fields/Paod_Bank_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Paod_Bank_Account_Number__c</fullName>
    <label>Paid  Bank Account Number</label>
    <length>20</length>
    <maskChar>asterisk</maskChar>
    <maskType>lastFour</maskType>
    <type>EncryptedText</type>
</CustomField>